tests/pass/type_alias.us
type Foo = i32;
type Bar = Foo;

fn main() {
    
}