tests/fail/many_fields.us
type char = u8;

struct List {
    head:i32,
    body:nil
}
struct List2 {
    head:i32,
    body:nil
}

fn main() -> List {
    let list = List {
        head:10,
        ad:10,
        hea:10
    };

    list;
}